--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1",
     "ws": "^7.5.10"
