--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql2": "^3.9.7",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
+    "sib-api-v3-sdk": "^8.5.0",
     "socket.io": "^4.8.1",
     "ws": "^7.5.10"
   }
